k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: meguurl-frontend-ingress
    annotations:
        cert-manager.io/issuer: meguurl-local-ca-issuer
spec:
    ingressClassName: nginx

    rules:
        - host: megu.url
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: meguurl-frontend
                            port:
                                number: 3000

    tls:
        - hosts:
              - megu.url
          secretName: meguurl-local-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: meguurl-backend-ingress
    annotations:
        cert-manager.io/issuer: meguurl-local-ca-issuer
        nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
    ingressClassName: nginx

    rules:
        - host: api.megu.url
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: meguurl-backend
                            port:
                                number: 6767

    tls:
        - hosts:
              - api.megu.url
          secretName: meguurl-local-tls
