k8s/ingress/meguurl-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: meguurl-ingress
spec:
    ingressClassName: nginx
    rules:
        - host: meguurl.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: meguurl-frontend
                            port:
                                number: 3000
        - host: api.meguurl.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: meguurl-backend
                            port:
                                number: 6767
